--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,10 @@ target 'app' do
   )
 
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
+  pod 'react-native-spinkit', :path => '../node_modules/react-native-spinkit'
+
   target 'appTests' do
     inherit! :complete
     # Pods for testing
