--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.1.0",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -32,6 +33,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-places-autocomplete": "^2.2.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^12.0.2",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-push-notification": "^7.4.0",
@@ -39,7 +41,9 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-shimmer-placeholder": "^2.0.7",
     "react-native-skeleton-placeholder": "^4.0.0",
+    "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^12.1.1",
