--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,7 @@ target 'app' do
     :hermes_enabled => false
   )
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
